@@ -1,5 +1,7 @@
-ENet 1.2.2 (May 13, 2010):
+ENet 1.2.2 (May 20, 2010):
 
+* checksum functionality is now enabled by setting a checksum callback
+inside ENetHost instead of compile time option 
 * added totalSentData, totalSentPackets, totalReceivedData, and
 totalReceivedPackets counters inside ENetHost for getting usage
 statistics
